# smart-pdf-chatbot

./: .gitignore  LICENSE  README.md  SECURITY.md  build.bat  index.html  package-lock.json  package.json  run_dev.bat  setup_dev.bat  start_servers.bat  tsconfig.json  vite.config.ts  vitest.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  ci.yml
PDFChatBot-New/: package-lock.json  package.json
PDFChatBot-New/src/: App.css  App.tsx
PDFChatBot-New/src-tauri/: Cargo.toml  tauri.conf.json
PDFChatBot-New/src-tauri/capabilities/: default.json
PDFChatBot-New/src-tauri/src/: lib.rs  main.rs
PDFChatBot-New/src/components/: ChatInterface.tsx
backend/: CMakeLists.txt  build.bat  config.py  create_missing_files.py  debug.py  main.py  processor_bindings.cpp  requirements.txt  run.py  setup.py  uvicorn_config.py
backend/chroma_db/: chroma.sqlite3
backend/cpp_modules/: processor.cpp
backend/modules/: __init__.py  ocr.py  ollama_handler.py  processor_interface.py
backend/tests/: test_main.py  test_performance.py
src/: App.test.tsx  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: ChatInterface.tsx  ChatMessage.tsx  FileUpload.tsx
src/test/: setup.ts
src/utils/: updateChecker.ts
tests/: test_systems.py
